# quantum-nlp-service

./: .dockerignore  .editorconfig  .env.docker  .env.example  .env.template  .gitignore  .htaccess  .htaccess_php  .pre-commit-config.yaml  ANALISIS_STACK_COMPLETO_VIGOLEONROCKS.md  ANALISIS_STACK_VIGOLEONROCKS.md  API_USAGE_GUIDE.md  ARCHITECTURE.md  BIBLIOGRAPHY.md  CHANGELOG.md  CHANGELOG_V1.0.0.md  CLAVES_API_ocferrel.md  CLEANUP_REPORT.json  CLIP_INTEGRATION_FIXES_SUMMARY.md  COMPETITIVE_ANALYSIS_2025_UNIFIED_500K.md  CONTRIBUTING.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_VPS_INSTRUCTIONS.md  DEVELOPMENT.md  DNS_CONFIGURATION.md  DNS_SETUP.md  DODECAGON_SUPREME_SYSTEM_SUMMARY.md  DOKPLOY_DEPLOYMENT.md  Dockerfile  Dockerfile.gateway  Dockerfile.prod  Dockerfile.quantum  EMPATHY_ENGINE_DOCS.md  EXECUTIVE_SUMMARY_ADVERSARIAL_TESTING.md  GUTENBERG_MULTIMEDIA_SUMMARY.md  GUTENBERG_MULTIMEDIA_SUMMARY.md.pentagon_backup  INFORME_COMPLETO_SISTEMA.md  INFORME_COMPLETO_TODAS_SECCIONES.md  (+465 more)
.dokploy/: config.json
.github/: dependabot.yml  pull_request_template.md
_backup_original_structure/: ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md  README.md  README_MULTIMODAL.md  VIGOLEONROCKS_Academic_Paper.tex  VIGOLEONROCKS_Implementation_Success.md  VIGOLEONROCKS_Website_Upgrade_Summary.md  analisis_revisado_gemini_multimodal.md  api_metrics_fixed.php  api_metrics_simple.php  api_metrics_supremacy.php  api_quantum_fixed.php  api_quantum_fixed_final.php  api_status_supremacy.php  champion_battle_results_20250829_203931.json  cleanup_repository.py  comprehensive_evaluation_1756076608.json  current_website.html  elite_world_benchmark_results_1756191503.json  elite_world_benchmark_results_1756193775.json  evaluacion_performance.php  exhaustive_impossible_evaluation_20250829_205957.json  index_backup.php  index_final.php  index_updated.php  latest_llm_comparison_20250829_200621.json  live_performance_results_1756177512.json  main.py  notification_system.py  openrouter_models_analysis.json  openrouter_models_checker.py  optimizacion_rendimiento_fase2.py  performance_monitor.py  performance_testing_plan.py  prime_transformations_system.py  quantum_arsenal_launcher.py  quantum_diagnostic_analysis.py  quantum_edge_analysis.py  quantum_edge_enhanced_maximizer.py  (+74 more)
apisix-mcp-main/: .eslintrc.json  ANALISIS-CUANTICO-EXHAUSTIVO-COMPLETADO.md  CHANGELOG.md  Dockerfile  FUNCIONALIDAD-COMPLETA-IMPLEMENTADA.md  QUANTUM-ESSENCE.md  README-QUANTUM-VIGOLEONROCKS.md  jest.config.cjs  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  readme.md  run-quantum-tests.js  smithery.yaml  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js
backup_20250901_155844/: requirements.txt
benchmarks/: performance_test.py
blueprints/: api_v1.py  api_v2.py  dashboard.py  main.py
cache/: persistent_cache.pkl
deployment_vigoleonrocks_com/: .htaccess  README.md  vigoleonrocks.conf
docs/: conf.py  (+1 more)
localGPT-main/Kimi-K2-main/async_rithmic-main/: .bumpversion.cfg  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
localGPT-main/Kimi-K2-main/async_rithmic-main/.github/workflows/: ci.yml
localGPT-main/Kimi-K2-main/async_rithmic-main/async_rithmic/: client.py  enums.py  exceptions.py  objects.py
localGPT-main/Kimi-K2-main/async_rithmic-main/async_rithmic/helpers/: concurrency.py
localGPT-main/Kimi-K2-main/async_rithmic-main/async_rithmic/plants/: base.py
localGPT-main/Kimi-K2-main/async_rithmic-main/async_rithmic/protocol_buffers/: __init__.py  exchange_order_notification_pb2.py  reject_pb2.py  request_account_list_pb2.py  request_account_rms_info_pb2.py  request_exit_position_pb2.py  request_front_month_contract_pb2.py  request_list_exchange_permissions_pb2.py  request_login_info_pb2.py  request_login_pb2.py  request_new_order_pb2.py  request_pnl_position_updates_pb2.py  request_rithmic_system_info_pb2.py  request_show_bracket_stops_pb2.py  request_show_brackets_pb2.py  request_show_order_history_dates_pb2.py  request_show_order_history_summary_pb2.py  request_show_orders_pb2.py  request_subscribe_for_order_updates_pb2.py  request_tick_bar_replay_pb2.py  request_time_bar_update_pb2.py  response_account_list_pb2.py  response_bracket_order_pb2.py  response_cancel_all_orders_pb2.py  response_front_month_contract_pb2.py  response_heartbeat_pb2.py  response_list_exchange_permissions_pb2.py  response_pnl_position_updates_pb2.py  response_rithmic_system_info_pb2.py  response_show_order_history_dates_pb2.py  response_tick_bar_replay_pb2.py  response_time_bar_update_pb2.py  response_trade_routes_pb2.py  response_update_stop_bracket_level_pb2.py
localGPT-main/Kimi-K2-main/async_rithmic-main/async_rithmic/protocol_buffers/scripts/: convert_from_proto2.py
localGPT-main/Kimi-K2-main/async_rithmic-main/async_rithmic/protocol_buffers/source/: account_pnl_position_update.proto  base.proto  depth_by_order_end_event.proto  exchange_order_notification.proto  request_account_rms_info.proto  request_depth_by_order_updates.proto  request_front_month_contract.proto  request_heartbeat.proto  request_logout.proto  request_modify_order.proto  request_pnl_position_updates.proto  request_reference_data.proto  request_show_brackets.proto  request_subscribe_to_bracket_updates.proto  request_time_bar_replay.proto  request_time_bar_update.proto  request_update_stop_bracket_level.proto  response_account_list.proto  response_exit_position.proto  response_list_exchange_permissions.proto  response_login.proto  response_new_order.proto  response_pnl_position_snapshot.proto  response_pnl_position_updates.proto  response_rithmic_system_info.proto  response_search_symbols.proto  response_show_orders.proto  response_subscribe_to_bracket_updates.proto  response_tick_bar_replay.proto  response_tick_bar_update.proto  trade_route.proto
localGPT-main/Kimi-K2-main/async_rithmic-main/docs/: index.rst  pnl.rst  realtime_data.rst
localGPT-main/Kimi-K2-main/async_rithmic-main/scripts/: conformance.py
localGPT-main/Kimi-K2-main/async_rithmic-main/tests/: test_base.py  test_endpoints.py
(+1242 files in other folders)
