[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-nlp-service"
description = "VIGOLEONROCKS - Quantum NLP Service with Human-like AI responses"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "VIGOLEONROCKS Team", email = "team@vigoleonrocks.ai"}
]
keywords = [
    "quantum", "nlp", "ai", "multilingual", "vigoleonrocks", 
    "human-responses", "metrics", "observability"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dynamic = ["version"]
dependencies = [
    "flask>=2.3.3",
    "flask-cors>=4.0.0",
    "psycopg2-binary>=2.9.7",
    "redis>=4.6.0",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-flask>=1.2.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "pre-commit>=3.3.3"
]
monitoring = [
    "prometheus-client>=0.17.1",
    "opentelemetry-api>=1.19.0",
    "opentelemetry-sdk>=1.19.0",
    "opentelemetry-instrumentation-flask>=0.40b0"
]

[project.urls]
Homepage = "https://github.com/vigoleonrocks/quantum-nlp-service"
Documentation = "https://docs.vigoleonrocks.ai"
Repository = "https://github.com/vigoleonrocks/quantum-nlp-service.git"
Issues = "https://github.com/vigoleonrocks/quantum-nlp-service/issues"

[project.scripts]
vigoleonrocks = "vigoleonrocks.cli:main"
vigo-server = "vigoleonrocks.interfaces.rest_api:main"

# Configuración de Black
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | _backup_original_structure
)/
'''

# Configuración de isort
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["vigoleonrocks"]
known_third_party = ["flask", "numpy", "pandas", "sklearn", "redis", "psycopg2"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_alphabetical_sort_within_sections = true
skip_glob = [
    "_backup_original_structure/*",
    "build/*",
    "dist/*"
]

# Configuración de MyPy
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Módulos a ignorar
[[tool.mypy.overrides]]
module = [
    "psycopg2.*",
    "redis.*",
    "sklearn.*",
    "pandas.*",
    "numpy.*"
]
ignore_missing_imports = true

# Configuración de pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=vigoleonrocks",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=70"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "randomness: Tests for randomness policy compliance (CRITICAL)",
    "metrics: Tests for metrics exposure (REQUIRED)",
    "multilingual: Tests for multilingual support",
    "quantum: Tests for quantum processing components",
    "slow: Slow running tests",
    "security: Security-related tests",
    "critical: Critical functionality tests"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

# Configuración de Coverage
[tool.coverage.run]
source = ["vigoleonrocks"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
    "*/_backup_original_structure/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# Configuración de Bandit (Security)
[tool.bandit]
exclude_dirs = ["tests", "_backup_original_structure", "build", "dist"]
skips = ["B101", "B601"]  # B101: assert_used, B601: paramiko_calls

# Configuración adicional para setuptools
[tool.setuptools]
packages = ["vigoleonrocks"]
include-package-data = true

[tool.setuptools.package-data]
vigoleonrocks = ["*.json", "*.yml", "*.yaml", "*.txt"]

[tool.setuptools_scm]
write_to = "vigoleonrocks/_version.py"
write_to_template = '__version__ = "{version}"'
