[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "async_rithmic"
version = "1.5.3"
description = "Python API Integration with Rithmic Protocol Buffer API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mickael Burguet" }
]
keywords = ["python", "rithmic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pattern_kit>=2.0.0",
    "websockets>=11.0,<15.0",
    "protobuf>=4.25.4,<5",
    "pytz>=2022.5",
    "tzlocal>=5.2"
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage", "pytest"]

[project.urls]
Homepage = "https://github.com/rundef/async_rithmic"
Repository = "https://github.com/rundef/async_rithmic"
Issues = "https://github.com/rundef/async_rithmic/issues"

[tool.setuptools.package-data]
"async_rithmic" = ["certificates/*"]

[tool.setuptools.packages.find]
where = ["."]
